# jaqmd

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLANS.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/jaqmd/: chunk.py  cli.py  config.py  embed.py  format.py  modelcache.py  paths.py  progress.py  qe.py  rerank.py  scan.py  schema.sql  snippet.py  store.py
src/jaqmd/mcp/: server.py
src/jaqmd/search/: bisearch.py  mosearch.py  query.py  snippet.py  trisearch.py  vsearch.py
src/jaqmd/tokenize/: bigram.py  morph.py  trigram.py
tests/: conftest.py  test_bisearch.py  test_chunk.py  test_cli.py  test_config.py  test_embed.py  test_format.py  test_mcp.py  test_morph_tokenize.py  test_mosearch.py  test_progress.py  test_qe.py  test_query.py  test_rerank.py  test_search_snippet.py  test_snippet.py  test_store.py  test_trigram_tokenize.py  test_trisearch.py  test_vsearch.py
