[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaqmd"
version = "0.1.0"
description = "日本語ドキュメントに特化したローカル検索エンジン"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "sqlite-vec>=0.1",
    "rich>=13.0",
]

[project.optional-dependencies]
morph  = [
    "sudachipy>=0.6",
    "sudachidict-core",
]
vector = ["fastembed>=0.8"]
qe     = ["llama-cpp-python>=0.3", "huggingface-hub>=0.20"]
mcp    = ["mcp>=1.2"]
all    = [
    "sudachipy>=0.6",
    "sudachidict-core",
    "fastembed>=0.8",
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
    "mcp>=1.2",
]

[project.scripts]
jaqmd = "jaqmd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jaqmd"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: 重い統合テスト（モデルのダウンロードが必要）",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
